Replace fixture RGB fields with channel 11 control

--- a/settings.json
+++ b/settings.json
@@ -25,6 +25,8 @@
   "ch_dimmer": 5,
   "ch_zoom": 6,
   "ch_zoom_fine": 0,
+  "ch_color_temp": 11,
+  "color_temp_value": 0,
   "pan_min": 2000,
   "pan_max": 63000,
   "tilt_min": 3000,
@@ -49,6 +51,8 @@
       "dimmer": 26,
       "zoom": 23,
       "zoom_fine": 24,
+      "color_temp_channel": 11,
+      "color_temp_value": 0,
       "pan_bias": 0,
       "tilt_bias": 0,
       "invert_pan": false,
@@ -66,6 +70,8 @@
       "dimmer": 26,
       "zoom": 23,
       "zoom_fine": 24,
+      "color_temp_channel": 11,
+      "color_temp_value": 0,
       "pan_bias": 0,
       "tilt_bias": 0,
       "invert_pan": false,
