--- a/settings.json
+++ b/settings.json
@@ -6,6 +6,7 @@
   "gpio_green_pin": 17,
   "gpio_red_pin": 27,
   "gpio_active_low": false,
+  "gpio_fixture_led_pins": [],
   "ax_pan": 0,
   "ax_tilt": 1,
   "ax_throt": 2,
